2002-03-07  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b22

	* Thumbnails in albums are now rendered with html_wrap files. The
	  default implementation of the nested album thumbnail now has a 
	  distinct look, like a stack of photos, to distinguish it from 
	  photo thumbnails. This feature inspired by work from Kees van den
	  Broek, Jesse Mullan and JPK.

2002-03-07  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b21

	* Fixed a very minor bug in add_photos that would cause the "number of
	  boxes" dropdown not to work if file_uploads is disabled.

	* Work around a bug in PHP 4.2.0-dev where session_is_registered()
	  apparently does not work as advertised.  This fixes a bug where folks
	  are unable to log on (but only in PHP 4.2.0-dev as far as I can
	  tell.)

	* Made Album's load method more robust.  Now it will check the object
	  that it deserialized to make sure that it's an instance of the Album
	  class.  If it's not, then we'll go immediately to the backup file.
	  Before we used to only go to the backup file if the album.dat file
	  was missing or empty.  So now it will work if the file exists, but is
	  corrupted.

2002-03-04  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b20

	* "Edit Caption", "Edit <Field>" and "Add Comment" popup
	  windows no longer commit changes when "Cancel" button
	  is hit (my god, this must be Gallery's oldest overlooked bug!).
 
2002-02-25  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b19

	* Tiny UI cleanup of view comments and showChild features.
 
2002-02-25  John Kirkland <jpk@bl.org> 1.2.6-cvs-b18

	* Item Capture Date was not getting set with the new return values from 
	  getExif();

2002-02-25  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b17

	* The "view comments" feature is now only available to the owner of the
	  album (and admins).

2002-02-24  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b16

	* UI cleanup of slideshow, captionator. On main page, 
	  got rid of reviled <hr> tag.
