@@ -1,3 +1,13 @@
+2002-03-07  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b23
+
+	* Now left-align the text below thumbnails in the album page. Looks
+	  a little cleaner.
+
+	* Fixed a bug in view_album where the invisible elements of the 
+	  admin commands forms below each thumbnail were being output, even 
+	  when the user was not an admin (was not a security issue, but a 
+	  waste of bandwidth)
+.
 2002-03-07  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b22
 
 	* Thumbnails in albums are now rendered with html_wrap files. The
